--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,23 @@
-/** {
-	background-color: #C3CAD1;
-} */
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 
 .top-navigation { 
 	background: #FFFFFF;
 	position: fixed;
+	top: 0;
 	width: 100%;
+	max-height:10em;
 }
 
 .top-navigation > .content {
     width: 970px;
-    height: 70px;
+    height: 50px;
     margin: 0 auto;
+    
 }
 
 li {
@@ -22,33 +28,50 @@ li {
 
 .navbar {
 	float: right;
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
+	color: #838994;
+	letter-spacing: 0.03em;
+	webkit-font-smoothing: antialiased;
+	padding-right: 4em;
 }
 
-.content {
-	width: 50em;
-	margin: 0 auto;
-}
 
 .top-navigation img.logo {
-	width:30px;
-	margin:10px 0;
+	margin:15px 0 0 120px;
+
 } 
 
 .frontPage {
 	background-image:url("../first-background.jpg");
-	background-position:center bottom;
+	background-position:0 bottom fixed;
 	background-repeat:no-repeat;
 	background-size:cover;
-	height:45em;
+	height:45.938rem;;
+	text-align:center;
+	color:#FFFFFF;
+	margin: auto 0;
 }
 
-
-
-/*.navbar {
-	border: 2px black solid;
-}*/
-
-#firstLink {
+li:hover{
+	background-color:#FFFFFF;
 	color:#4c5058;
+	cursor:pointer;
 }
+
+#active {
+	color:#4c5058;
+	font-weight:500;
+}
+
+button {
+	border-radius: 2px;
+	background-color:orange;
+}
+
+h1{
+	margin-top: 17.5rem;
+    font-size: 3.125rem;
+}
+
 
