--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,14 @@ html {
   box-sizing: inherit;
 }
 
+body {
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
+	color: #838994;
+	letter-spacing: 0.03em;
+	webkit-font-smoothing: antialiased;
+}
+
 .top-navigation { 
 	background: #FFFFFF;
 	position: fixed;
@@ -16,9 +24,7 @@ html {
 .top-navigation > .content {
     width: 970px;
     height: 50px;
-    margin: 0 auto;
-    
-}
+ }
 
 li {
 	display: inline-block;
@@ -65,13 +71,36 @@ li:hover{
 }
 
 button {
-	border-radius: 2px;
-	background-color:orange;
+	border-radius: 4px;
+	background-color:#f15a29;
+	border-color: #f15a29;
+	width: 9.688rem;
+	padding: 1rem 1.5rem;
+	color: #FFFFFF;
+	font-weight: 300;
+	font-size: 1.125rem;
+	letter-spacing: 0.05em;
+	text-shadow: none;
+}
+
+button:hover {
+	background-color: #d9400e;
+    border-color: #cf3d0e;
+    cursor: pointer;
 }
 
 h1{
 	padding-top: 17.5rem;
     font-size: 3.125rem;
+    margin-bottom: 0px;
+}
+
+h1, h3 {
+	font-weight: 300;
+}
+
+.content {
+	margin: 0 auto;
 }
 
 
