first final draft

--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,10 @@ h1, h3 {
 	font-weight: 300;
 }
 
+.devices > h3 {
+	font-size:1.5em;
+}
+
 .content {
 	margin: 0 auto;
 }
@@ -117,7 +121,8 @@ h1, h3 {
     display: inline-block;
     float: left;
     margin: -5;
-    border-bottom:1px solid #CCCCCC;
+    border-bottom:1px solid #eaebec;
+    border-bottom-style:inset;
     padding-bottom:5em;
 }
 
@@ -138,15 +143,17 @@ footer >h3 {
 	font-size:1em;
 	font-weight:500;
 	text-align:center;
-	webkit-font-smoothing: antialiased;
+	-webkit-font-smoothing: antialiased;
 }
 
 footer > p{
 	margin-left:0;
+	margin-bottom:5em;
+	margin-top:0;
 	color:#838994;
 	font-size:.9em;
 	font-weight:300;
-	webkit-font-smoothing: antialiased;
+	-webkit-font-smoothing: antialiased;
 }
 
 .social{
@@ -157,12 +164,13 @@ footer > p{
 }
 
 .twittercircle, .facebookcircle, .instacircle {
-	border: 1px solid #CCCCCC;
+	border: 1px solid #eaebec;
 	border-radius:50%;
-	height:2em;
-	width:2em;
+	height:2.5rem;
+	width:2.5rem;
 	padding: 0.625rem 0;
 	margin: 1.25rem 5px;
+	margin-top:0;
 }
 
 .twittercircle {
